2010-05-21 Bjoern Bornkamp (Version 1.0-2)
    * Updated American Statistician reference,
    and minor error in example for SEL function.


2009-07-10 Bjoern Bornkamp (Version 1.0-1)
    * First Release. This version comes along our
    publication in the American Statistician (as
    supplemental material).