@@ -1,7 +1,7 @@
-353f2a616f761b6293ecff35cc303757 *ChangeLog
-a164fd063b7d202e590e9f3e05850c7e *DESCRIPTION
+b1b7f29e33020d5ade573582103688ba *ChangeLog
+932a820e0b358fa1a0c8419ba5d8da21 *DESCRIPTION
 3ee09a1230adb6b1679365a78aad2edb *NAMESPACE
-1269e0bce26cc03dc0d7a7f80ef021f2 *R/SEL.R
+6f2649852f8f980dc4ef4cf87c5220f2 *R/SEL.R
 678fe631911e73191159e7918f5c2b9c *man/SEL-internal.Rd
 013c355b9fdee0def836ed7af8d14b78 *man/SEL-package.Rd
 7d0c2d4c2dfd581908f637cab5045705 *man/SEL.Rd
@@ -9,7 +9,7 @@ e63f4c46a2864ca85afe17dcc781d8cd *man/comparePlot.Rd
 a68985dd69486bc23348ae603ecdeefd *man/fit.SEL.Rd
 f07c316cbaa3b1dd80e7ba994155fcc3 *man/getbinPost.Rd
 b1821d111c8855534715faef13cece51 *man/knotave.Rd
-8256da347be3495e4bd34e954ad10caf *man/min.abs.Rd
+e81ba23f297033925eccb56974bb55b3 *man/min_abs.Rd
 2f76b3aa6f5e557975229a3c9c6fdd10 *man/plot.SEL.Rd
 6bc547a344ec972e0cd5cb62a67645d1 *man/predict.SEL.Rd
 ab4481c969d9e3418ea7165565375f4a *man/quantSEL.Rd
@@ -17,4 +17,4 @@ fdae69f2ee717cb937cd81ecc53c019a *man/rvSEL.Rd
 9a651ae5077df20255cd46bcefbb356e *src/SEL-init.c
 82c3f6c0550092d2fd6c09e8385ea2fb *src/knotave.c
 4778fe86dbe1fbdf24b0f1d2d56a0b71 *tests/SELtests.R
-696e5b504ec1a9f2c4af86967c2b13b3 *tests/SELtests.Rout
+3febabf8fa5783e27eb58ce9c09478a9 *tests/SELtests.Rout.save
