@@ -1,11 +1,13 @@
 
-R version 2.9.1 (2009-06-26)
-Copyright (C) 2009 The R Foundation for Statistical Computing
-ISBN 3-900051-07-0
+R version 4.3.2 (2023-10-31) -- "Eye Holes"
+Copyright (C) 2023 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
 Type 'license()' or 'licence()' for distribution details.
+
+  Natural language support but running in an English locale
 
 R is a collaborative project with many contributors.
 Type 'contributors()' for more information and
@@ -69,3 +71,6 @@ Brier divergence to pistar:  0.3465014
 > mean((predict(fit2, newdata=sq)-dbeta(sq, 1.5, 1.5))^2)
 [1] 0.346443
 > 
+> proc.time()
+   user  system elapsed 
+  0.225   0.021   0.237 
